# tools-generalized-roy

./: .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_UPGRADE_PLAN.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/source/: changes.md  conf.py  contributing.md  credits.md  economics.md  index.md  installation.md  references.md  reliability.md  software_engineering.md  tutorial.grmpy.yml  tutorial.ipynb  tutorial.md
docs/source/figures/: create.py
docs/source/figures/scripts/: __init__.py  fig-distribution-joint.py  fig-eh-marginal-effect.py  fig-local-average-treatment.py  fig-reliability-par.py  fig-treatment-effects.py  fig-weights-marginal-effect.py
docs/source/notebooks/: auxiliary.py  grmpy_tutorial_notebook.ipynb  index.md  ose_lecture.ipynb  quickstart.ipynb  tutorial_semipar_notebook.ipynb
grmpy/: grmpy_config.py
grmpy/estimate/: estimate_output.py  estimate_par.py  estimate_semipar.py
grmpy/simulate/: simulate_auxiliary.py
grmpy/test/: auxiliary.py  conftest.py  random_init.py  test_integration_semipar.py  test_quality.py  test_unit.py  test_unit_semipar.py
grmpy/test/resources/: data.grmpy.pkl  data.grmpy.txt
science/grmpy/: __init__.py  config.py  config_defaults.yaml  engine.py
science/grmpy/core/: __init__.py  contracts.py  exceptions.py
science/grmpy/defaults/: estimation.yml
science/grmpy/estimators/: __init__.py  adapter_parametric.py  adapter_semiparametric.py  base.py  factory.py  manager.py  parametric.py  semiparametric.py
science/grmpy/simulators/: __init__.py  adapter_roy_model.py  base.py  factory.py  manager.py
science/grmpy/tests/: __init__.py  conftest.py
science/grmpy/tests/integration/: test_estimation_pipeline.py
science/grmpy/tests/regression/: test_carneiro_replication.py
science/grmpy/tests/unit/: test_config.py  test_contracts.py  test_factory.py
science/grmpy/utils/: kernreg.py
science/grmpy/visualization/: __init__.py  mte_plot.py
