[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grmpy"
version = "2.0.0"
description = "Simulation and estimation of the generalized Roy model"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "The grmpy Development Team", email = "eisenhauer@policy-lab.org" }
]
dependencies = [
    "linearmodels",
    "numpy",
    "matplotlib",
    "oyaml",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "scikit-misc",
    "scipy",
    "seaborn",
    "statsmodels",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "sphinx>=6.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "pypandoc",
    "ipykernel",
    "sphinxcontrib-bibtex",
    "nbconvert",
    "ruff",
    "pre-commit",
    "jupyterlab",
]

# -----------------------------------------------------------------------------
# Hatch Build Configuration
# -----------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["science/grmpy"]

[tool.hatch.build.targets.sdist]
include = [
    "/science",
    "/docs",
]

# -----------------------------------------------------------------------------
# Hatch Environments
# -----------------------------------------------------------------------------

[tool.hatch.envs.default]
features = ["dev"]

# -----------------------------------------------------------------------------
# Ruff Configuration (per coding standards)
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docs/build", "_external"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["grmpy"]

# -----------------------------------------------------------------------------
# Pytest Configuration
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["science/grmpy/tests"]
markers = ["integration: marks integration tests"]
addopts = ["-v", "--strict-markers"]

